<resources>

    <string name="app_name">Supercharged Fitness</string>
    <string name="demo_text">Demo Text</string>
    <string name="start_workout">Start Workout</string>
    <string name="demo_time">00:00</string>
    <string name="step_demo_text">1 / 11</string>

    <string name="ad_main_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="get_started">Get Started</string>
    <string name="ready_to_take_on_the_challenge">Ready to take on the challenge?</string>

    <string name="weekly_purchase_button_text">SUBSCRIBE NOW\n1 week for free, then INR 99 / week</string>
    <string name="monthly_purchase_button_text">SUBSCRIBE NOW\n1 week for free, then INR 299 / Year</string>
    <string name="purchase_privacy_content">The transcript subscription Payment will be charged to the user\'s Google Account at confirmation of purchase and the subscription is set to auto-renew unless disabed 24-hours before the end of the current period. The Account will be charged for renewal within 24-hours prior to the end of the current period, and identify the cost of the renewal. Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="terms_of_use_title">Terms of use</string>
    <string name="restore_purchases_title">Restore Purchases</string>
    <string name="weekly_plan_offer_text">One week free after weekly Plan activated for INR 99</string>
    <string name="monthly_plan_offer_text">One week free after Monthly Plan activated for INR 199</string>
    <string name="yearly_plan_offer_text">One week free after Yearly Plan activated for INR 299</string>
    <string name="exit_confirmation">Are you sure want to exit?</string>
    <string name="dl_exercise_quite_title">Don\'t quite! Feeling tired means it\'s working!</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_continue">Continue</string>
    <string name="error_video_not_exist">Video can`t exist!</string>
    <string name="update">Update</string>
    <string name="btn_next">Next</string>
    <string name="btn_share">Share</string>
    <string name="update_msg">An New Version of APP is Available</string>
    <string name="critical_update_msg">An critical update is required</string>
    <string name="btn_update">Update</string>
    <string name="version_1_2">Version 1.1</string>

</resources>
