<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.superChargedFitness.activity.PurchaseActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_logo_subscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPurchasedWeekly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_rounded_theme"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:lineSpacingExtra="2dp"
        android:padding="8dp"
        android:text="@string/weekly_purchase_button_text"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnPurchasedMonthly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_rounded_theme"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:lineSpacingExtra="2dp"
        android:padding="8dp"
        android:text="@string/monthly_purchase_button_text"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPurchasedWeekly"
        />

    <TextView
        android:id="@+id/txtPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/privacy_policy_title"
        android:textColor="@color/color_theme"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/btnPurchasedWeekly"
        app:layout_constraintTop_toBottomOf="@+id/btnPurchasedMonthly"
        />

    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/terms_of_use_title"
        android:textColor="@color/color_theme"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPurchasedWeekly"
        app:layout_constraintTop_toBottomOf="@+id/btnPurchasedMonthly"
        />

    <TextView
        android:id="@+id/txtRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/restore_purchases_title"
        android:textColor="@color/color_theme"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnPurchasedWeekly"
        app:layout_constraintTop_toBottomOf="@+id/btnPurchasedWeekly"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nstScrollingContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrivacy">

        <TextView
            android:id="@+id/txtPurchaseContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/purchase_privacy_content"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTerms" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
